# altmanai-sdk

./: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  __init__.py  architecture.md  artifact.schema.json  conftest.py  event.py  event.schema.json  explainability.py  explainability.schema.json  gitignore  index.mjs  main.py  models.py  package.json  pnpm-workspace.yaml  pyproject.toml  receipt.py  receipt.schema.json  release-process.md  roadmap.md  test_receipt.py  test_verify.py  tsconfig.base.json  utils.py  verify.py
