[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "altmanai"
version = "0.1.0"
description = "Official Python toolkit for AltmanAI SDK"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "AltmanAI" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "build>=1.2.0", "ruff>=0.6.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
